--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         <div class="logo"><img src="./icons/Logo.svg" alt="logo"></div>
         <ul class="nav-links">
-            <li><a href="#">Shop</a></li>
+            <li><a href="#"><strong>Shop</strong></a></li>
             <li><a href="#">Men</a></li>
             <li><a href="#">Women</a></li>
             <li><a href="#">Combos</a></li>
@@ -34,6 +34,13 @@
     </nav>
     <div id="banner">
         <img src="./static/banner_image.jpg" alt="banner">
+        <div class="icon left-icon">   
+            <img src="./icons/ChevronLeft.svg" alt="Favorite">
+        </div>
+        <div class="icon right-icon">
+            <img src="./icons/ChevronRight.svg" alt="Favorite">
+
+        </div>
         <div class="banner-text">
             <h5 class="banner_header_tag">T-shirt / Tops</h5>
             <h1 class="banner_heading">
@@ -44,8 +51,12 @@
             <h4 class="banner_sub_heading">
                 cool / colorful / comfy
             </h4>
+            <button class="button button1">Shop Now</button>
+
         </div>
     </div>
+
+
 
 
 
