deals image added ,put text over it apply montsreet font

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>homepage</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -34,7 +37,7 @@
     </nav>
     <div id="banner">
         <img src="./static/banner_image.jpg" alt="banner">
-        <div class="icon left-icon">   
+        <div class="icon left-icon">
             <img src="./icons/ChevronLeft.svg" alt="Favorite">
         </div>
         <div class="icon right-icon">
@@ -45,7 +48,7 @@
             <h5 class="banner_header_tag">T-shirt / Tops</h5>
             <h1 class="banner_heading">
                 Summer</h1>
-                <h1 class="banner_heading">
+            <h1 class="banner_heading">
                 Value Pack
             </h1>
             <h4 class="banner_sub_heading">
@@ -56,7 +59,29 @@
         </div>
     </div>
 
-
+    <!-- deals start -->
+    <div id="deals">
+        <div class="deals_1">
+            <img src="./static/deals/1.jpg" alt="1">
+            <div class="deals_1_text">
+                <h6 class="deals_tag">Low Price</h6>
+                <h2>High Coziness</h2>
+                <h3>UPTO 50 % OFF</h3>
+                <h6 style="border-bottom: 1px solid white;">Explore Items</h6>
+            </div>
+        </div>
+        <div class="deals_2">
+            <img src="./static/deals/2.jpg" alt="2">
+            <div class="deals_2_text">
+                <h6 class="deals_tag">Beyoung Presents</h6>
+                <h2>Breezy Summer
+                    Style</h2>
+                    <h3>UPTO 50% OFF</h3>
+                    <h6 style="border-bottom: 1px solid white;">Explore Items</h6>
+            </div>
+        </div>
+    </div>
+    <!-- deals end -->
 
 
 
