--- a/index.html
+++ b/index.html
@@ -82,7 +82,26 @@
         </div>
     </div>
     <!-- deals end -->
+<!-- new Arrival -->
+<div id="new_arrival">
+    <p>New Arrival</p>
+    <div class="frame">
+        <div class="icon left-icon_new_arrival">
+            <img src="./icons/arrow_left.svg" alt="Favorite">
+        </div>
+        <div class="icon right-icon_new_arrival">
+            <img src="./icons/arrow_right.svg" alt="Favorite">
 
+        </div>
+        <div class="frame_item">
+            <img src="./static/new_arrival/knitted.jpg" alt="knitted">
+            <img src="./static/new_arrival/full_sleave.png" alt="full_sleave" >
+            <img src="./static/new_arrival/active_t_shirt.png" alt="active_t_shirt">
+            <img src="./static/new_arrival/urban_shirts.png" alt="urban_shirts">
+
+        </div>
+    </div>
+</div>
 
 
 </body>
