new arival done

--- a/index.html
+++ b/index.html
@@ -83,24 +83,44 @@
     </div>
     <!-- deals end -->
 <!-- new Arrival -->
+<div class="wrapper">
 <div id="new_arrival">
+    <div class="newArrival_head">
+    <div class="rectangle"></div>
     <p>New Arrival</p>
+    </div>
     <div class="frame">
+
         <div class="icon left-icon_new_arrival">
             <img src="./icons/arrow_left.svg" alt="Favorite">
+        </div>
+      
+        <div class="frame_item">
+            <div class="image">
+                <img src="./static/new_arrival/active_t_shirt.png" alt="active_t_shirt">
+                <div class="caption">active t-shirt</div>
+              </div>
+              <div class="image">
+                <img src="./static/new_arrival/full_sleave.png" alt="full_sleave">
+                <div class="caption">full-sleeve</div>
+              </div>
+              <div class="image">
+                <img src="./static/new_arrival/knitted.jpg" alt="knitted">
+                <div class="caption">knitted</div>
+              </div>
+              <div class="image">
+                <img src="./static/new_arrival/urban_shirts.png" alt="urban_shirts">
+                <div class="caption">urban shirts</div>
+              </div>
+
         </div>
         <div class="icon right-icon_new_arrival">
             <img src="./icons/arrow_right.svg" alt="Favorite">
 
         </div>
-        <div class="frame_item">
-            <img src="./static/new_arrival/knitted.jpg" alt="knitted">
-            <img src="./static/new_arrival/full_sleave.png" alt="full_sleave" >
-            <img src="./static/new_arrival/active_t_shirt.png" alt="active_t_shirt">
-            <img src="./static/new_arrival/urban_shirts.png" alt="urban_shirts">
-
-        </div>
     </div>
+
+</div>
 </div>
 
 
