need-help-section

--- a/index.html
+++ b/index.html
@@ -500,18 +500,19 @@
             <div class="frame-217">
                 <div class="feedback-card">
                     <div class="user-stars-section">
-                      <img src="./static/favourite/Rectangle 729.png" alt="" srcset="">
-                      <div class="stars">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/star_half.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector (1).svg" alt="" sizes="" srcset="">
+                        <img src="./static/favourite/Rectangle 729.png" alt="" srcset="">
+                        <div class="stars">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/star_half.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector (1).svg" alt="" sizes="" srcset="">
 
-                      </div>
+                        </div>
                     </div>
                     <p class="feedback-card-user-name">Floyd Miles</p>
-                    <p class="feedback-card-user-comment">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat
+                    <p class="feedback-card-user-comment">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                        amet sint. Velit officia consequat
                         duis enim velit mollit.
                         Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit
                         aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
@@ -519,44 +520,136 @@
                 </div>
                 <div class="feedback-card">
                     <div class="user-stars-section">
-                      <img src="./static/favourite/image/Rectangle 729 (1).png" alt="" srcset="">
-                      <div class="stars">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/star_half.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector (1).svg" alt="" sizes="" srcset="">
+                        <img src="./static/favourite/image/Rectangle 729 (1).png" alt="" srcset="">
+                        <div class="stars">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/star_half.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector (1).svg" alt="" sizes="" srcset="">
 
-                      </div>
+                        </div>
                     </div>
                     <p class="feedback-card-user-name">Ronald Richards</p>
-                    <p class="feedback-card-user-comment">ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p class="feedback-card-user-comment">ullamco est sit aliqua dolor do amet sint. Velit officia
+                        consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
                 </div>
                 <div class="feedback-card">
                     <div class="user-stars-section">
-                      <img src="./static/favourite/image/Rectangle 729 (2).png" alt="" srcset="">
-                      <div class="stars">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/star_half.svg" alt="" sizes="" srcset="">
-                        <img src="./static/favourite/Vector (1).svg" alt="" sizes="" srcset="">
+                        <img src="./static/favourite/image/Rectangle 729 (2).png" alt="" srcset="">
+                        <div class="stars">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/star_half.svg" alt="" sizes="" srcset="">
+                            <img src="./static/favourite/Vector (1).svg" alt="" sizes="" srcset="">
 
-                      </div>
+                        </div>
                     </div>
                     <p class="feedback-card-user-name">Savannah Nguyen</p>
-                    <p class="feedback-card-user-comment">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. 
-                        Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <p class="feedback-card-user-comment">Amet minim mollit non deserunt ullamco est sit aliqua dolor do
+                        amet sint. Velit officia consequat duis enim velit mollit.
+                        Exercitation veniam consequat sunt nostrud amet. Amet minim mollit non deserunt ullamco est sit
+                        aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam
+                        consequat sunt nostrud amet.</p>
                 </div>
             </div>
             <div class="frame-244">
-                  <div class="ellipse">
+                <div class="ellipse">
                     <img src="./static/favourite/ellipse/Ellipse 9.svg" alt="" srcset="">
                     <img src="./static/favourite/ellipse/Ellipse 10 (1).svg" alt="" srcset="">
                     <img src="./static/favourite/ellipse/Ellipse 11.svg" alt="" srcset="">
 
-                  </div>
+                </div>
             </div>
+        </div>
+    </div>
+    <!-- FEEDBACK SECTION END -->
+    <!-- NEED HELP SECTION START -->
+    <div id="need-help-section">
+        <div class="frame-12">
+            <div class="frame-123">
+                <div class="need-help-content">
+                    <p class="need-help-heading">NeedHelp</p>
+                    <div class="need-help-text">
+                        <p>Contact Us</p>
+                        <p>Track Order</p>
+                        <p>Returns & Refunds</p>
+                        <p>FAQ's</p>
+                        <p>Career</p>
+                    </div>
+                </div>
+
+
+                <div class="need-help-content">
+                    <p class="need-help-heading">Company</p>
+                    <div class="need-help-text">
+                        <p>About Us</p>
+                        <p>euphoria Blog</p>
+                        <p>euphoriastan</p>
+                        <p>Collaboration</p>
+                        <p>Media</p>
+                    </div>
+                </div>
+
+                
+                <div class="need-help-content">
+                    <p class="need-help-heading">More Info</p>
+                    <div class="need-help-text">
+                        <p>Term and Conditions</p>
+                        <p>Privacy Policy</p>
+                        <p>Shipping Policy</p>
+                        <p>Sitemap</p>
+                     </div>
+                </div>
+                <div class="need-help-content">
+                    <p class="need-help-heading">Location</p>
+                    <div class="need-help-text">
+                        <p>support@euphoria.in</p>
+                        <p>Eklingpura Chouraha, Ahmedabad Main Road</p>
+                         <p>(NH 8- Near Mahadev Hotel) Udaipur, India- 313002</p>
+                     </div>
+                </div>
+            </div>
+            <p class="download">Download The App</p>
+
+
+            <div class="social">
+                <div class="social-medias-icon">
+                    <img src="./icons/need-help/facebook.svg" alt="" srcset="">
+                    <img src="./icons/need-help/instagram.svg" alt="" srcset="">
+                    <img src="./icons/need-help/linkedln.svg" alt="" srcset="">
+                    <img src="./icons/need-help/twitter.svg" alt="" srcset="">
+
+                </div>
+
+                <div class="play-store-download">
+                     <div class="store">
+                        <img src="./icons/need-help/play-store.svg" alt="" srcset="">
+                        <div>
+                        <p>android app on</p>
+                        <p>Google Play</p>
+                        </div>
+                    </div>
+                    <div class="store">
+                        <img src="./icons/need-help/mobile.svg" alt="" srcset="">
+                        <div>
+                        <p>Available on the</p>
+                        <p>App Store</p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+            <hr style="height:2px;border-width:0;color:gray;background-color:gray; margin: 2.67rem 0">
+            <div class="popular">
+            <p>Popular Categories</p>
+            <img src="./icons/need-help/Icon.svg" alt="" srcset="">
+            </div>
+            <hr style="height:2px;border-width:0;color:gray;background-color:gray; margin: 2.67rem 0">
+
+            <p class="copyright">Copyright © 2023 Euphoria Folks Pvt Ltd. All rights reserved.</p>
+
         </div>
     </div>
 
