--- a/index.html
+++ b/index.html
@@ -142,57 +142,57 @@
             <div class="frame_image">
                 <img src="./static/big_saving_zones/Rectangle 74.jpg" alt="" srcset="">
                 <div class="Big_saving_card_1">
-                    <p>Hawaiian
+                    <p class="big-saving-1">Hawaiian
                         Shirts</p>
-                    <p>Dress up in summer vibe</p>
-                    <p>UPTO 50% OFF</p>
-                    <img src="./icons/arrow_bottom.svg" alt="">
-                    <button>SHOPNOW</button>
+                    <p class="big-saving-2">Dress up in summer vibe</p>
+                    <p class="big-saving-3">UPTO 50% OFF</p>
+                    <img class="big-saving-arrow" src="./icons/arrow_bottom.svg" alt="">
+                    <button class="btn">SHOPNOW</button>
                 </div>
             </div>
             <div class="frame_image">
                 <img src="./static/big_saving_zones/Rectangle 75.png" alt="" srcset="">
                 <div class="Big_saving_card_2">
-                    <button>Limited Stock</button>
-                    <p>Printed
+                    <button class="btn" style="background-color: black;color:white;border: none;">Limited Stock</button>
+                    <p class="big-saving-1">Printed
                         T-Shirt</p>
-                    <p>New Designs Every Week</p>
-                    <p>UPTO 40% OFF</p>
-                    <img src="./icons/arrow_bottom.svg" alt="">
-                    <button>SHOPNOW</button>
+                    <p class="big-saving-2">New Designs Every Week</p>
+                    <p class="big-saving-3">UPTO 40% OFF</p>
+                    <img class="big-saving-arrow" src="./icons/arrow_bottom.svg" alt="">
+                    <button  class="btn">SHOPNOW</button>
                 </div>
             </div>
             <div class="frame_image">
                 <img src="./static/big_saving_zones/Rectangle 76.png" alt="" srcset="">
                 <div class="Big_saving_card_2">
-                    <p>Cargo
+                    <p class="big-saving-1">Cargo
                         Joggers</p>
-                    <p>Move with style & comfort</p>
-                    <p>UPTO 50% OFF</p>
-                    <img src="./icons/arrow_bottom.svg" alt="">
-                    <button>SHOPNOW</button>
+                    <p class="big-saving-2">Move with style & comfort</p>
+                    <p class="big-saving-3">UPTO 50% OFF</p>
+                    <img class="big-saving-arrow" src="./icons/arrow_bottom.svg" alt="">
+                    <button class="btn">SHOPNOW</button>
                 </div>
             </div>
             <div class="frame_imagee">
                 <img src="./static/big_saving_zones/Rectangle 77.png" alt="" srcset="">
-                <div class="Big_saving_card_3">
-                    <p>Urban
+                <div class="Big_saving_card_3" >
+                    <p class="big-saving-1">Urban
                         Shirts</p>
-                    <p>Live In Confort</p>
-                    <p>FLAT 60% OFF</p>
-                    <img src="./icons/arrow_bottom.svg" alt="">
-                    <button>SHOPNOW</button>
+                    <p class="big-saving-2">Live In Confort</p>
+                    <p class="big-saving-3">FLAT 60% OFF</p>
+                    <img class="big-saving-arrow" src="./icons/arrow_bottom.svg" alt="">
+                    <button class="btn">SHOPNOW</button>
                 </div>
             </div>
             <div class="frame_imagee">
                 <img src="./static/big_saving_zones/Rectangle 78.png" alt="" srcset="">
                 <div class="Big_saving_card_3">
-                    <p>Oversized
+                    <p class="big-saving-1">Oversized
                         T-Shirts</p>
-                    <p>Street Style Icon</p>
-                    <p>FLAT 60% OFF</p>
-                    <img src="./icons/arrow_bottom.svg" alt="">
-                    <button>SHOPNOW</button>
+                    <p  class="big-saving-2">Street Style Icon</p>
+                    <p class="big-saving-3">FLAT 60% OFF</p>
+                    <img class="big-saving-arrow" src="./icons/arrow_bottom.svg" alt="">
+                    <button class="btn">SHOPNOW</button>
                 </div>
             </div>
         </div>
@@ -212,10 +212,12 @@
                 <img src="./static/what_we_made/unsplash_bBiuSdck8tU.png" alt="" srcset="">
                 <div class="what_made_content">
                     <h1>WE MADE YOUR EVERYDAY FASHION BETTER!</h1>
+                    <br>
                     <h4>In our journey to improve everyday fashion,<br>
                         euphoria presents EVERYDAY wear range -<br>
                         Comfortable & Affordable fashion 24/7</h4>
-                    <button>SHOP NOW</button>
+                        <br>
+                    <button class="btn button-what_made">SHOP NOW</button>
                 </div>
             </div>
             <div>
