--- a/index.html
+++ b/index.html
@@ -432,25 +432,31 @@
                 <img src="./static/LimeLight/Rectangle 25.png" alt="" srcset="">
                 <div class="men_content">
                     <div class="category_detail">
-                        <p class="subCategory_name">Hoodies and </p>
+                        <p class="subCategory_name">Black Sweatshirt with .... </p>
                         <p class="further">exploreNow!</p>
                     </div>
                     <div class="price">
-                        <p>$121.0</p>
+                        <p class="limelight-price">$121.0</p>
                     </div>
                 </div>
-
+                <div class="heart-icon">
+                    <img src="./icons/hearts.svg" alt="hearts-image" srcset="">
+                </div>
             </div>
             <div class="card">
                 <img src="./static/LimeLight/Rectangle 25 (1).png" alt="" srcset="">
                 <div class="men_content">
                     <div class="category_detail">
-                        <p class="subCategory_name">Hoodies and SweetShirts</p>
+                        <p class="subCategory_name">line Pattern Black H...</p>
                         <p class="further">exploreNow!</p>
+
                     </div>
-                    <div class="icon_right">
-                        <img src="./icons/arrow_right.svg" alt="" srcset="">
+                    <div class="price">
+                        <p>$37.00</p>
                     </div>
+                </div>
+                <div class="heart-icon">
+                    <img src="./icons/hearts.svg" alt="hearts-image" srcset="">
                 </div>
 
             </div>
@@ -458,12 +464,15 @@
                 <img src="./static/LimeLight/Rectangle 25 (2).png" alt="" srcset="">
                 <div class="men_content">
                     <div class="category_detail">
-                        <p class="subCategory_name">Hoodies and SweetShirts</p>
+                        <p class="subCategory_name">Black Shorts</p>
                         <p class="further">exploreNow!</p>
                     </div>
-                    <div class="icon_right">
-                        <img src="./icons/arrow_right.svg" alt="" srcset="">
+                    <div class="price">
+                        <p>$37.00</p>
                     </div>
+                </div>
+                <div class="heart-icon">
+                    <img src="./icons/hearts.svg" alt="hearts-image" srcset="">
                 </div>
 
             </div>
@@ -471,12 +480,15 @@
                 <img src="./static/LimeLight/Rectangle 25 (3).png" alt="" srcset="">
                 <div class="men_content">
                     <div class="category_detail">
-                        <p class="subCategory_name">Hoodies and SweetShirts</p>
+                        <p class="subCategory_name">Levender Hoodie with ....</p>
                         <p class="further">exploreNow!</p>
                     </div>
-                    <div class="icon_right">
-                        <img src="./icons/arrow_right.svg" alt="" srcset="">
+                    <div class="price">
+                        <p>$119.00</p>
                     </div>
+                </div>
+                <div class="heart-icon">
+                    <img src="./icons/hearts.svg" alt="hearts-image" srcset="">
                 </div>
 
             </div>
