new arrival item name text align to left

--- a/index.html
+++ b/index.html
@@ -452,7 +452,7 @@
 
                     </div>
                     <div class="price">
-                        <p>$37.00</p>
+                        <p class="limelight-price">$37.00</p>
                     </div>
                 </div>
                 <div class="heart-icon">
@@ -468,7 +468,7 @@
                         <p class="further">exploreNow!</p>
                     </div>
                     <div class="price">
-                        <p>$37.00</p>
+                        <p class="limelight-price">$37.00</p>
                     </div>
                 </div>
                 <div class="heart-icon">
@@ -484,7 +484,7 @@
                         <p class="further">exploreNow!</p>
                     </div>
                     <div class="price">
-                        <p>$119.00</p>
+                        <p class="limelight-price">$119.00</p>
                     </div>
                 </div>
                 <div class="heart-icon">
