slider is added in the bottom of banner

--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         </div>
 
     </nav>
+
+    <!-- BANNER START -->
     <div id="banner">
         <img src="./static/banner_image.jpg" alt="banner">
         <div class="icon left-icon">
@@ -57,8 +59,12 @@
             <button class="button button1">Shop Now</button>
 
         </div>
+        <div class="banner-slide">
+            <img src="./icons/banner-bottom-slide-icon/carouselCaptions.svg" alt="" srcset="">
+            <img src="./icons/banner-bottom-slide-icon/carouselCaptions (1).svg" alt="" srcset="">
+        </div>
     </div>
-
+<!-- BANNER END -->
     <!-- deals start -->
     <div id="deals">
         <div class="deals_1">
@@ -398,7 +404,7 @@
 
     <div class="top_brand">
         <p class="top_brand_name">Top Brands Deal</p>
-        <p class="top_brand_offer">Up To 60% off on brands</p>
+        <p class="top_brand_offer">Up To <span style="color: yellow;">60%</span> off on brands</p>
         <div class="brand">
             <div class="brand_logo">
                 <img src="./icons/brand/image 7.svg" alt="" srcset="">
